try GC settings for higher thruput